--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,24 @@
-appdirs==1.4.3
-beautifulsoup4==4.6.0
-bs4==0.0.1
-click==6.7
-crtsh==0.1.0
-decorator==4.0.11
-dominate==2.3.1
-Flask==0.12
+certifi==2019.3.9
+chardet==3.0.4
+Click==7.0
+crtsh==0.2.0
+dominate==2.3.5
+Flask==1.0.2
 Flask-Bootstrap==3.3.7.1
-Flask-GoogleMaps==0.2.4
-Flask-Login==0.4.0
+Flask-GoogleMaps==0.2.6
 flask-nav==0.6
-Flask-Session==0.3.1
-Flask-SQLAlchemy==2.2
+Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
-future==0.16.0
-itsdangerous==0.24
-Jinja2==2.9.5
-MarkupSafe==1.0
-packaging==16.8
-pbr==2.0.0
-pkg-resources==0.0.0
-psutil==5.2.1
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
 pygeoip==0.3.2
-pyparsing==2.2.0
-python-geoip==1.2
-python-geoip-geolite2==2015.303
-python-nmap==0.6.1
-python-whois==0.6.5
-PyYAML==3.12
-requests==2.13.0
-six==1.10.0
-smmap2==2.0.1
-SQLAlchemy==1.1.9
-sqlalchemy-migrate==0.11.0
-sqlparse==0.2.3
-Tempita==0.5.2
-uptime==3.0.1
+PyYAML==5.1
+requests==2.21.0
+SQLAlchemy==1.3.3
+urllib3==1.24.3
 visitor==0.1.3
-Werkzeug==0.12
-WTForms==2.1
+Werkzeug==0.15.2
+whois==0.7
+WTForms==2.2.1
